--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mountain Scout - Altitude Checker</title>
-    <link rel="manifest" href="Altitude-Sickness/manifest.json">
-    <link rel="stylesheet" href="Altitude-Sickness/styles.css">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="stylesheet" href="./styles.css">
     <meta name="theme-color" content="#1f2937">
-    <link rel="icon" href="Altitude-Sickness/icons/icon-192x192.png">
+    <link rel="icon" href="./icons/icon-192x192.png">
 </head>
 <body>
     <div class="app">
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <script src="Altitude-Sickness/db.js"></script>
-    <script src="Altitude-Sickness/app.js"></script>
+    <script src="./db.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
